fix theming for terminal with activecontrastborder
fixes #43699

--- a/src/vs/workbench/parts/terminal/electron-browser/media/terminal.css
+++ b/src/vs/workbench/parts/terminal/electron-browser/media/terminal.css
@@ -116,7 +116,7 @@
 .hc-black .monaco-workbench .panel.integrated-terminal .xterm:focus::before {
 	display: block;
 	content: "";
-	border: 1px solid #f38518;
+	border: 1px solid;
 	position: absolute;
 	left: -5px;
 	top: 0;
@@ -127,7 +127,7 @@
 
 .hc-black .monaco-workbench .panel.integrated-terminal .monaco-split-view2.horizontal .split-view-view:not(:only-child) .xterm.focus::before,
 .hc-black .monaco-workbench .panel.integrated-terminal .monaco-split-view2.horizontal .split-view-view:not(:only-child) .xterm:focus::before {
-	right: 0px;
+	right: 0;
 }
 
 .monaco-workbench .panel.integrated-terminal .xterm .xterm-helpers {
